--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -149,6 +149,7 @@ endif
 
 config P2PMEM
 	bool "Peer 2 Peer Memory Device Support"
+	depends on ZONE_DEVICE
 	select GENERIC_ALLOCATOR
 	help
 	  This driver is for peer 2 peer memory device managers.
