--- a/drivers/memory/Kconfig
+++ b/drivers/memory/Kconfig
@@ -151,6 +151,7 @@ endif
 config P2PMEM
 	bool "Peer 2 Peer Memory Device Support"
 	depends on ZONE_DEVICE
+	depends on MEMORY # Hack to prevent set not build issue
 	select GENERIC_ALLOCATOR
 	help
 	  This driver is for peer 2 peer memory device managers.
